# 2024-A

./: .gitignore
cc2/cmake1/: CMakeLists.txt
cc2/cmake1/include/: funciones.h
cc2/cmake1/src/: funciones.cpp  main.cpp
cc2/dinamicArray/: gDynamic.cpp
cc2/lab1/: CMakeLists.txt  a.out  fun.h  helloW.cpp  problema.cpp  problema_f.cpp
cc2/lab10/: 1.cpp  1_5.cpp  move.cpp  move_classes.cpp  temp.cpp
cc2/lab11/: 1.cpp
cc2/lab12/: CMakeLists.txt  raw_ll.cpp  raw_ptr_linked_list  shared_ptr_linked_list  sll.cpp  ull.cpp  unique_ptr_linked_list
cc2/lab13/: 1.cpp  2.cpp  CMakeLists.txt
cc2/lab14/: CMakeLists.txt  no_thread  no_thread.cpp  thread  thread.cpp
cc2/lab2/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp
cc2/lab3/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
cc2/lab4/: 1.cpp  2.cpp  3.cpp  4.cpp
cc2/lab4.1/: 1.cpp  2.cpp
cc2/lab5/: 1.cpp  2.cpp
cc2/lab6/: 1.cpp  2.cpp  prueba.cpp
cc2/lab7/: 1.cpp  p1.cpp
cc2/lab8/: 1.cpp
cc2/lab9/: 1.cpp
cc2/move_semantics/: containers.cpp  move_assignment.cpp
cc2/patrones_diseño/: strategy.cpp
cc2/practica1/: 7.29  7.29.cpp  8.12.cpp
cc2/pruebas/: berlys_move_unique_ptr.cpp  dynamic.cpp  explicitconversion.cpp  future  future.cpp  gDynamic.cpp  gStatic.cpp  memoria.cpp  merge_sort.cpp  move_unique_ptr.cpp  one_move_unique_ptr.cpp  promise.cpp  static.cpp  vector.cpp
dbp/cookies/: index.php
dbp/examen/: bienvenida.php  login.php
dbp/lab1/: intoxicados.html  kanye.html  thestrokes.html
dbp/lab2/: index.html  style.css
dbp/lab3/: blog.html  clases.html  index.html  nosotros.html  (+1 more)
(+29 files in other folders)
